Add files via upload
- Fixed a bug where enabling `autorun` caused the `parallel_tasks_multiplier` to be ignored, always setting an equal number of tasks across all threads.
- Refactored the chunker to improve performance and memory efficiency, resulting in a ~5-7% uplift in performance, with chunk processing increasing from 198-200 to 208-215 chunks per second.
- Added new classes to support the performance refactor.

This update serves as a stopgap while transitioning to the new method "getChunksAtAsync(minX, minZ, maxX, maxZ, ...)" recently added to Paper async chunk api that allows chunk loading by area, as discussed here: https://github.com/PaperMC/Paper/commit/8c5b837e0530ffd7881336be1ed77a5cd2e591e1